add statements impl